<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.iweidujiang</groupId>
    <artifactId>spring-insight-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Spring Insight</name>
    <description>一个轻量级、面向 Spring Boot 应用的诊断与架构洞察工具</description>

    <modules>
        <module>insight-agent</module>
        <module>insight-collector-service</module>
        <module>insight-collector</module>
        <module>insight-storage</module>
        <module>spring-insight-spring-boot-starter</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.5.9</spring-boot.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <!-- 依赖管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot 依赖管理 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 项目内部模块依赖管理 -->
            <dependency>
                <groupId>io.github.iweidujiang</groupId>
                <artifactId>insight-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.iweidujiang</groupId>
                <artifactId>insight-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.iweidujiang</groupId>
                <artifactId>insight-collector-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.iweidujiang</groupId>
                <artifactId>insight-collector</artifactId>
                <version>${project.version}</version>
            </dependency>
            
            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <!-- Spring Insight Starter -->
            <dependency>
                <groupId>io.github.iweidujiang</groupId>
                <artifactId>spring-insight-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>